Fri Mar 30 12:25:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Current.cpp:
          Layout changes

Fri Mar 30 12:22:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/compiler.html:
          Removed deprecated flags, fixed typos and updated a few parts

Thu Mar 29 16:50:15 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_type.cpp:
        * TAO_IDL/fe/fe_init.cpp:

          Fixed calls to ACE_String_Base methods set (const char*, bool)
          and reset (bool) to pass a boolean instead of an integer.

Wed Mar 28 16:02:37 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * docs/Options.html: Updated the documentation to explain what the
          -ORBSkipServiceConfigOpen option does.  Thanks to Vance Maverick
          <vmaverick at pgp dot com> for motivating.

Thu Mar 29 13:40:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Use the safe include in the anyop header file, not in the source
          file, makes it possible to use a safe include in the diffserv library.

        * tao/DiffServPolicy.mpc:
        * tao/DiffServPolicy/Client_Network_Priority_Policy.cpp:
        * tao/DiffServPolicy/Client_Network_Priority_Policy.h:
        * tao/DiffServPolicy/DiffServ_Network_Priority_Hook.cpp:
        * tao/DiffServPolicy/DiffServPolicy_ORBInitializer.cpp:
        * tao/DiffServPolicy/Server_Network_Priority_Policy.cpp:
        * tao/DiffServPolicy/Server_Network_Priority_Policy.h:
          Use the safe include feature to make sure people have to include
          the correct file to use diffserv

Thu Mar 29 12:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Profile.cpp:
          Fixed bug 2869, handling an invalid endpoint string. Thanks to
          Pierre Bisaillon <pierrebizz at hotmail dot com> for reporting this bug

        * tests/Bug_2869_Regression/*: