@@ -1,0 +1,5 @@
+// -*- MPC -*-
+// $Id$
+
+project: taoserver {
+}
