@@ -1,0 +1,24 @@
+// $Id$
+
+#include "tao/ORB.h"
+
+ACE_RCSID (Bug_2735_Regression,
+           server,
+           "$Id$")
+
+int
+main (int argc, char *argv[])
+{
+  try
+    {
+      CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
+      orb->destroy ();
+    }
+  catch (const CORBA::Exception& ex)
+    {
+      ex._tao_print_exception ("Exception caught:");
+      return 1;
+    }
+
+  return 0;
+}
